Fixed header top gap bug, fixed opacity of header

--- a/resources/style.css
+++ b/resources/style.css
@@ -5,13 +5,15 @@ header {
   display: flex;
   align-items: center;
   position: fixed;
+  top: 0;
   z-index: 1;
   width: 100%;
-  height: 75px;
+  height: 80px;
   border-bottom: 1px solid black;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
+  background-color: white;
 }
 
 .logo {
@@ -23,7 +25,7 @@ header {
 
 .logo span {
   color: MediumAquamarine;
-  margin: 15px;
+  margin-left: 15px;
 }
 
 nav {
@@ -44,10 +46,12 @@ div {
   display: flex;
   position: relative;
   top: 80px;
+  z-index: 0;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0px;
-  margin-bottom: 78px;
+  /*margin-bottom: 78px;*/
+  /*padding-top: 116px;*/
 }
 
 .column {
